<resources>
    <string name="app_name">TheApp</string>
    <string name="sign_in">sign_in</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="forget_password">Forget_Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">SUBMIT</string>
    <string name="name">Name</string>
    <string name="security_code">Security Code</string>
    <string name="expair_date">Expair Date</string>
    <string name="card_number">Card Number</string>
    <string name="get_location">Get Location</string>
    <string name="account" />
    <string name="setting">setting</string>
    <string name="Account">account</string>
    <string name="payment">payment</string>
    <string name="location">location</string>
    <string name="my_profile">my_profile</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="john_doe">John Doe</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="Username">Username</string>
    <string name="destination">destination</string>
    <string name="age">age</string>
    <string name="dob">dob</string>
    <string name="full_name">full_name</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="Destination">Destination</string>
    <string name="Todo">TODO</string>
    <string name="logout">LogOut</string>
    <string name="TOdo">TODO</string>
</resources>