<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/profile">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_picture"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewProfile"
        android:text="@string/Username"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#D32F2F"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        tools:ignore="HardcodedText,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhone"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

</RelativeLayout>