<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppPayment"
    android:background="@drawable/apppayment">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/card_number"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="195dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/expair_date"
        android:textColor="#311B92"
        tools:ignore="LabelFor,MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="250dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/security_code"
        tools:ignore="LabelFor,MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="304dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="357dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="422dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>